        nyan: Can now be stopped with dfhack-run
        quicksave: Restricted to fortress mode
        remotefortressreader: Exposes more information
        search:
          - Supports noble suggestion screen (e.g. suggesting a baron)
          - Supports fortress mode loo[k] menu
          - Recognizes ? and ; keys
        teleport: Fixed cursor recognition
        tweak: debug output now logged to stderr.log instead of console
        workflow: Improved handling of plant reactions
    Removed

DFHack 0.40.24-r3
    Internals
        Ruby library now included on OS X - ruby scripts should work on OS X 10.10
        libstdc++ should work with older versions of OS X
        Added support for onLoadMap/onUnloadMap.init scripts
        game type detection functions are now available in the World module
        The DFHACK_LOG_MEM_RANGES environment variable can be used to log information to stderr.log on OS X
        Fixed adventure mode menu names
        Fixed command usage information for some commands
    Lua
        Lua scripts will only be reloaded if necessary
        Added a df2console() wrapper, useful for printing DF (CP437-encoded) text to the console in a portable way
        Added a strerror() wrapper
    New internal commands
        hide/show: hide and show the console on Windows
        sc-script: Allows additional scripts to be run when certain events occur (similar to onLoad*.init scripts)
    New plugins
        autohauler: A hauling-only version of autolabor
    New scripts
        modtools/reaction-product-trigger: triggers callbacks when products are produced (contrast with when reactions complete)
    New tweaks
        fps-min: Fixes the in-game minimum FPS setting
        shift-8-scroll: Gives Shift+8 (or *) priority when scrolling menus, instead of scrolling the map
        tradereq-pet-gender: Displays pet genders on the trade request screen
    New features